# TagDict

./: .gitignore  Pipfile  README.md  example.ipynb  pyproject.toml  test.ipynb
TagDict/: __init__.py  excel.py
desktop/: __main__.py  controller.py
dev/: to_yaml.py
